--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "playwright test --headed",
+    "test": "npx playwright test --headed --browser=firefox",
     "allureReport": "allure serve"
   },
   "keywords": [],
