--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx playwright test --headed --browser=firefox",
-    "allureReport": "allure serve"
+    "test": "npx playwright test --headed",
+    "allureReport": "npx allure generate allure-results --clean && allure open"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "moment": "^2.29.4"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "playwright": "^1.40.0",
     "winston": "^3.11.0"
   }
