--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
     "playwright": "^1.40.0",
+    "randomstring": "^1.3.0",
+    "string-format": "^2.0.0",
     "winston": "^3.11.0"
   }
 }
