--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx playwright test --headed",
-    "allureReport": "npx allure serve allure-results"
+    "allureReport": "npx allure serve allure-results",
+    "deleteAllureResults": "del-cli --force allure-results"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "@types/node": "^20.9.4",
     "allure-commandline": "^2.24.1",
     "allure-playwright": "^2.9.2",
+    "del-cli": "^5.1.0",
     "moment": "^2.29.4"
   },
   "dependencies": {
